# Bearbotics-2014

code/NIVision_Client/: HotGoalDetection.cpp
code/Smokey_VII/: Aimerino.cpp  Aimerino.h  CMakeLists.txt  CompPrefs.h  HotGoalDetector.cpp  HotGoalDetector.h  InputControl.cpp  InputControl.h  LEDIndicator.cpp  LEDIndicator.h  LEDIndicator_I2C.cpp  LEDIndicator_I2C.h  Logger.cpp  Logger.h  Potentiometer.cpp  Potentiometer.h  Prefs.h  Shooter.cpp  Shooter.h  Smokey_VII.cpp  Smokey_VII.h  Sonar.cpp  Sonar.h
code/Smokey_VII/Config/: PracticeConfigurations.xml
code/backup/: Smokey_VII.cpp  Smokey_VII.h
datasheets/: PracticeBotPID.odt
riley/: advice.txt
